sep dataloader from controllers few cleanups removed unused data types added generic filtering